# sprats

./: README.md  pyproject.toml
src/sprats/collections/: __init__.py  linked_list.py
src/sprats/config/: __init__.py  app_config.py  app_persist.py  app_state.py
