[project]
name = "sprats"
description = "Some fishy tools"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]